<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/dimen_16dp"
    android:orientation="vertical"
    android:id="@+id/musicCardItem">

    <TextView
        android:id="@+id/titleTV"
        android:text="@string/songName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_semibold"
        android:textSize="@dimen/text_16sp">
    </TextView>

    <TextView
        android:id="@+id/artistTV"
        android:text="@string/albumArtist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_italic"
        android:textSize="@dimen/text_16sp">
    </TextView>

    <Button
        android:id="@+id/bPlayButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play"
        android:layout_gravity="end"
        android:fontFamily="@font/montserrat_medium"
        android:textSize="@dimen/text_14sp">
    </Button>

</LinearLayout>